--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -16,9 +16,28 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  -- exposed-modules:
+  exposed-modules:     Probability
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.7 && <4.8
-  -- hs-source-dirs:
+  build-depends:        base >=4.7 && <4.8
+                      , containers
+  hs-source-dirs:      src
   default-language:    Haskell2010
+  default-extensions:  MultiParamTypeClasses
+                       FlexibleInstances
+
+
+
+
+
+test-suite tests
+    build-depends: NaiveBayes
+                 , hspec >= 2.2
+                 , base >= 4.6
+                 , containers >= 0.5
+    type: exitcode-stdio-1.0
+    main-is: tests.hs
+    buildable: True
+    default-language: Haskell2010
+    hs-source-dirs: test
+    other-modules: ProbabilitySpec
