--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -16,7 +16,8 @@ extra-source-files:  README.md
 cabal-version:       >=1.10
 
 library
-  exposed-modules:     Probability
+  exposed-modules:     Event
+                       Event.Probability
   -- other-modules:
   -- other-extensions:
   build-depends:        base >=4.7 && <4.8
