implementing Naive Bayes for Descrete values; Event and most of Event.Probability are unused;

--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -18,6 +18,8 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Event
                        Event.Probability
+                       NaiveBayes
+                       NaiveBayes.Discrete
   -- other-modules:
   -- other-extensions:
   build-depends:        base >=4.7 && <4.8
