--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -18,6 +18,7 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Event
                        Event.Probability
+
                        NaiveBayes
                        NaiveBayes.Discrete
   -- other-modules:
@@ -30,7 +31,19 @@ library
                        FlexibleInstances
 
 
-
+executable NaiveBayesWeka
+    build-depends: NaiveBayes
+                 , WekaData >= 0.1.2.3
+                 , base >=4.7
+                 , containers >= 0.5.5
+    hs-source-dirs: src
+    main-is:       NaiveBayesWeka/Main.hs
+    other-modules: NaiveBayes.Discrete.Weka
+    buildable: True
+    default-language: Haskell2010
+    default-extensions:   MultiParamTypeClasses
+                          FlexibleInstances
+                          FlexibleContexts
 
 
 test-suite tests
