--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -19,17 +19,21 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Event
                        Event.Probability
+                       Event.Probability.Eval
+                       Event.Probability.Eval.Impl
 
                        NaiveBayes
                        NaiveBayes.Discrete
   -- other-modules:
-  -- other-extensions:
   build-depends:        base >=4.7 && <4.8
                       , containers
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  MultiParamTypeClasses
                        FlexibleInstances
+  other-extensions:    TypeFamilies
+                       ConstraintKinds
+                       ExistentialQuantification
 
 
 executable NaiveBayesWeka
