--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -18,13 +18,17 @@ cabal-version:       >=1.10
 
 library
   exposed-modules:     EventProbability
+                       EventProbability.Cache
+                       Cache
   -- other-modules:
   build-depends:        base >=4.7 && <4.8
                       , containers
   hs-source-dirs:      src
   default-language:    Haskell2010
---  default-extensions:
---  other-extensions:
+  default-extensions:  MultiParamTypeClasses
+                       ConstraintKinds
+  other-extensions:    FlexibleContexts
+                       ExistentialQuantification
 
 
 --executable NaiveBayesWeka
