--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -34,15 +34,17 @@ library
                        ExistentialQuantification
 
 
---executable NaiveBayesWeka
---    build-depends: NaiveBayes
---                 , WekaData >= 0.1.2.3
---                 , base >=4.7
---                 , containers >= 0.5.5
---    hs-source-dirs: src
---    main-is:       NaiveBayesWeka/Main.hs
---    other-modules: NaiveBayesWeka
---    buildable: True
---    default-language: Haskell2010
---    default-extensions:   --MultiParamTypeClasses
---                          --FlexibleInstances
+executable NaiveBayesWeka
+    build-depends: NaiveBayes
+                 , WekaData >= 0.1.2.6
+                 , base >=4.7
+                 , containers >= 0.5.5
+    hs-source-dirs: src
+    main-is:       EventProbability/NaiveBayes/WekaMain.hs
+    other-modules: EventProbability.NaiveBayes.Weka
+    buildable: True
+    default-language: Haskell2010
+    default-extensions: MultiParamTypeClasses
+                        FlexibleInstances
+                        ConstraintKinds
+    other-extensions:   FlexibleContexts
