--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -2,10 +2,10 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                NaiveBayes
-version:             0.1.0.0
+version:             0.1.0.1
 synopsis:            Naive Bayes Classificator
 homepage:            https://github.com/fehu/min-dat--naive-bayes
--- description:
+description:         Naive Bayes Classificator for /Weka/ *.arff data.
 license:             MIT
 license-file:        LICENSE
 author:              Dmitry K
@@ -20,11 +20,13 @@ library
   exposed-modules:     EventProbability
                        EventProbability.Cache
                        EventProbability.NaiveBayes
+                       EventProbability.NaiveBayes.Weka
                        EventProbability.DefaultImpl
                        Cache
   -- other-modules:
   build-depends:        base >=4.7 && <4.8
-                      , containers
+                      , containers >= 0.5.5
+                      , WekaData >= 0.1.2.6
   hs-source-dirs:      src
   default-language:    Haskell2010
   default-extensions:  MultiParamTypeClasses
@@ -41,10 +43,9 @@ executable NaiveBayesWeka
                  , containers >= 0.5.5
     hs-source-dirs: src
     main-is:       EventProbability/NaiveBayes/WekaMain.hs
-    other-modules: EventProbability.NaiveBayes.Weka
+--    other-modules:
     buildable: True
     default-language: Haskell2010
     default-extensions: MultiParamTypeClasses
                         FlexibleInstances
                         ConstraintKinds
-    other-extensions:   FlexibleContexts
