--- a/NaiveBayes.cabal
+++ b/NaiveBayes.cabal
@@ -3,9 +3,12 @@
 
 name:                NaiveBayes
 version:             0.1.0.1
+
 synopsis:            Naive Bayes Classificator
 homepage:            https://github.com/fehu/min-dat--naive-bayes
 description:         Naive Bayes Classificator for /Weka/ *.arff data.
+                     Homepage: <https://github.com/fehu/min-dat--naive-bayes>.
+
 license:             MIT
 license-file:        LICENSE
 author:              Dmitry K
